<resources>
    <string name="app_name">Osmanabad Covid Care</string>
    <string name="app_short_name">O.C.C</string>
    <string name="app_logo">App Logo</string>
    <string name="enter_patient_details">Enter Patient Details</string>
    <string name="patient_name">Patient\'s Name</string>
    <string name="patient_gender">Patient\'s Gender</string>
    <string name="patient_remark">Patient\'s Remark</string>
    <string name="patient_date">Date Admitted</string>
    <string name="patient_age">Patient\'s Age</string>
    <string name="patient_address">Patient\'s Address</string>
    <string name="patient_adhaar">Adhaar Card No.</string>
    <string name="patient_number">Contact Number</string>
    <string name="update_remarks">Update Remarks</string>
    <string name="date_updated">Date</string>
    <string name="search_by">Enter Name/Mobile No.</string>
    <string name="get_patient_remarks">Search Patients</string>
    <string name="about_app">About App</string>
    <string name="save_details">Save Details</string>
    <string name="update_remark">Update Remark</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="powered_by">Powered By LeadSoft IT Solutions</string>
    <string name="username_email">UserName/Email</string>
    <string name="password">Password</string>
    <string name="login_image">Login Image</string>
    <string name="sign_in">Sign In</string>
    <string name="test_done">Test Done?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="tests_done">Tests Done</string>
    <string name="any_other_diseases">Any Other Diseases</string>
    <string name="ok">OK</string>
    <string name="enter_tests_done">Enter Name</string>
    <string name="technical_contribution">Technical Contribution</string>
    <string name="pass_out_year_2020">Pass Out Year : 2020</string>
    <string name="abhishek">Abhishek Umesh Shah</string>
    <string name="abhishek_contribution">Technical Contribution in Android Application Development for Osmanabad Covid Care App.</string>
    <string name="abhi_sponsored_by">Sponsored by TPCT\'s CoE Osmanabad and LeadSoft IT Solutions</string>
    <string name="abhishek_profile">abhishek_profile</string>
    <string name="suraj">Suraj Sunil Pawar</string>
    <string name="managing_director">Managing Director at LeadSoft IT Solutions, Osmanabad</string>
    <string name="informative_contribution">Informative Contribution</string>
    <string name="vikramsinha_mane">Dr. Vikramsinha Mane</string>
    <string name="principal">Principal, TPCT\'s CoE Osmanabad</string>
    <string name="principal_contribution">Informative Contribution in Android Application Development for Osmanabad Covid Care App.</string>
    <string name="political_contribution">Political Contribution</string>
    <string name="dr_rana_jagjithsinha_patil">Dr. Rana Jagjithsinha Patil</string>
    <string name="rana_dada_details">Ranajagjitsinha Padmsinha Patil is a member of 14th Vidhan Sabha, lower house of Legislature of Maharashtra, from Tuljapur in Maharashtra state in India.</string>
    <string name="district_level_contribution">District Level Contribution</string>
    <string name="kaustubh_diwegawkar">Mr. Kaustubh Diwegawkar</string>
    <string name="kaustubh_diwegaonkar_details">An IAS topper from Latur Maharashtra cleared his UPSC in 2012 with flying colours. He stood 1st in Maharashtra and All India Rank 15 He joined as Asst Collector in Thane.</string>
    <string name="leadsoft_profile">LeadSoft Profile</string>
    <string name="vikramsinha_mane_profile">VikramSinha Mane Profile</string>
    <string name="rana_jagjithsinha_patil_profile">Rana Jagjithsinha Patil Profile</string>
    <string name="kaustubh_diwegaonkar_profile">Kaustubh Diwegawkar Profile</string>
    <string name="application_contribution">Application Contribution</string>
    <string name="search">Search</string>
    <string name="save_to_pdf">Save To PDF</string>
    <string name="save_and_email_pdf">Save and Email PDF</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="please_provide_ages">Please Provide Ages</string>
    <string name="from_age">From Age</string>
    <string name="to_age">To Age</string>
    <string name="please_provide_dates">Please Provide Dates</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="please_provide_details">Please Provide Details</string>
    <string name="please_provide_gender">Please Provide Gender</string>
    <string name="save_changed_password">Save Changed Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="officer">Nodal Officer</string>
    <string name="staff">Staff</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="area_and_location">Area and Location</string>
</resources>
