<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/image_logo"
        android:layout_centerInParent="true"
        android:src="@drawable/terna"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:fontFamily="sans-serif-condensed-medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:text="@string/powered_by"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textStyle="bold"
        android:id="@+id/text_powered_by"/>

</RelativeLayout>