<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_provide_dates"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:id="@+id/text_date_dialog_heading"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_date_dialog_heading"
        android:layout_marginTop="20dp"
        android:inputType="date"
        android:id="@+id/editTextFromDateLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_date"
            android:inputType="date"
            android:id="@+id/editTextFromDate"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFromDateLayout"
        android:layout_marginTop="20dp"
        android:id="@+id/editTextToDateLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_date"
            android:inputType="date"
            android:id="@+id/editTextToDate"/>

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>
