<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/update_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_remarks"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:id="@+id/text_view_header_update_remarks"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/text_view_header_update_remarks"
            android:layout_marginTop="10dp"
            android:id="@+id/header_line" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_line"
            android:layout_marginTop="20dp"
            android:id="@+id/name_layout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_name"
                android:inputType="textCapWords"
                android:completionThreshold="0"
                android:id="@+id/patient_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_layout"
            android:layout_marginTop="20dp"
            android:id="@+id/number_layout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_number"
                android:inputType="number"
                android:completionThreshold="0"
                android:id="@+id/patient_number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_layout"
            android:layout_marginTop="20dp"
            android:id="@+id/adhaar_layout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_adhaar"
                android:id="@+id/patient_adhaar"
                android:inputType="number"
                android:completionThreshold="0"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/adhaar_layout"
            android:layout_marginTop="20dp"
            android:id="@+id/date_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_updated"
                android:inputType="date"
                android:id="@+id/patient_date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_layout"
            android:layout_marginTop="20dp"
            android:id="@+id/remark_layout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_remark"
                android:inputType="textCapWords"
                android:id="@+id/patient_remark"
                android:completionThreshold="0"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_center_type"
            android:layout_below="@id/remark_layout"
            android:layout_marginTop="20dp"
            android:background="@drawable/spinner_background"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_center"
            android:layout_below="@id/spinner_center_type"
            android:layout_marginTop="20dp"
            android:background="@drawable/spinner_background"/>

    </RelativeLayout>

</ScrollView>