<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/login"
        android:id="@+id/login_image"
        android:contentDescription="@string/login_image"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_user_layout"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_image">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_email"
            android:id="@+id/login_user"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_user_layout"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        android:id="@+id/login_pass_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="12dp"
            android:id="@+id/login_pass" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_pass_layout"
        android:layout_marginTop="15dp"
        android:background="@drawable/spinner_background"
        android:id="@+id/login_spinner_centerType"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_spinner_centerType"
        android:layout_marginTop="15dp"
        android:background="@drawable/spinner_background"
        android:id="@+id/login_spinner_center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_spinner_center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        android:id="@+id/btn_login"
        android:onClick="loginUser"/>

</RelativeLayout>