<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:id="@+id/search_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_patient_remarks"
        android:id="@+id/text_view_header"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/text_view_header"
        android:layout_marginTop="12dp"
        android:id="@+id/header_line"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_line"
        android:layout_marginTop="20dp"
        android:id="@+id/number_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_number"
            android:inputType="number"
            android:completionThreshold="0"
            android:id="@+id/patient_number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_layout"
        android:layout_marginTop="20dp"
        android:id="@+id/adhar_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_adhaar"
            android:inputType="number"
            android:completionThreshold="0"
            android:id="@+id/patient_adhaar"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_patients"
        android:layout_below="@id/adhar_layout"
        android:layout_marginTop="30dp"
        tools:listitem="@layout/custom_patients_list"/>

</RelativeLayout>